<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >


    <EditText
        android:id="@+id/oldPass"
        android:inputType="text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/old_password"
        android:autofillHints="" />

    <EditText
        android:id="@+id/newPass"
        android:inputType="text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/new_password"
        android:autofillHints="" />

    <EditText
        android:id="@+id/confirmNewPass"
        android:inputType="text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/comfirm_new_password"
        android:autofillHints="" />

</LinearLayout>